<?xml version="1.0" encoding="utf-8"?><!--
  ~     This file is part of snapcast
  ~     Copyright (C) 2014-2018  Johannes Pohl
  ~
  ~     This program is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/homeCoordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="de.badaix.snapcast.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorTopBar"
            app:titleTextAppearance="@style/ToolbarTitle.AllCaps"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            android:id="@+id/tvNextLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="4dp"
            android:text="@string/next_label"
            android:textAllCaps="true"
            android:letterSpacing="0.15"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorNextLabel"
            android:textSize="32sp"
            android:visibility="gone"
            android:layout_marginBottom="15dp"
             />

        <TextView
            android:id="@+id/tvNextNotification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="4dp"
            android:text="@string/no_upcoming_notification"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"
            android:textSize="40sp"
            android:textColor="@color/colorNotificationText" />

        <TextView
            android:id="@+id/tvNextDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="24dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold|italic"
            android:textSize="32sp"
            android:textColor="@color/colorNotificationText"
            android:visibility="gone" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnStopPhoneAlarm"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:layout_marginTop="30dp"
            android:paddingHorizontal="24dp"
            android:gravity="center"
            android:textAllCaps="true"
            android:textSize="21sp"
            android:textColor="@color/colorButtonText"
            android:text="@string/action_stop_phone_alarm"
            app:backgroundTint="@color/colorButtonBackground"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            app:cornerRadius="8dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnStopAlarmForAll"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:layout_marginTop="16dp"
            android:paddingHorizontal="24dp"
            android:gravity="center"
            android:textAllCaps="true"
            android:textSize="21sp"
            android:textColor="@color/colorButtonText"
            android:text="@string/action_stop_alarm_for_all"
            app:backgroundTint="@color/colorButtonBackground"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            app:cornerRadius="8dp" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
